# funcexpr-xr

./: .gitignore  LICENSE  pyproject.toml  readme.md  test.py
funcexpr_xr/: __init__.py  _ref_utils.py  evaluate.py  evaluate_with_interp.py  evaluate_with_reindex.py
funcexpr_xr/alignment/: __init__.py  _validators.py  base.py  exact.py  outer.py
tests/: conftest.py  test_alignment.py  test_evaluate.py  test_evaluate_with_interp.py  test_evaluate_with_reindex.py  test_round_coords.py  test_validators.py
xeval/: __init__.py  _ref_utils.py  evaluate.py  evaluate_with_interp.py  evaluate_with_reindex.py
xeval/alignment/: __init__.py  _validators.py  base.py  exact.py  inner.py  outer.py
xeval/rounding/: __init__.py  coords.py
