[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funcexpr-xr"
version = "0.1.0"
description = "xarray.DataArray support layer for funcexpr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "funcexpr",
    "numexpr",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["funcexpr_xr"]